--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
 		"preview": "astro preview",
 		"astro": "astro"
 	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.1.0",
+	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
+	"devDependencies": {
 		"astro": "^5.6.1",
-		"tailwindcss": "^4.1.0"
-	},
-	"packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808"
+		"tailwindcss": "^4.1.0",
+		"@tailwindcss/vite": "^4.1.0",
+		"@tailwindcss/typography": "^0.5.16"
+	}
 }
