--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
 		"astro": "^5.6.1",
 		"sharp": "^0.34.0",
 		"tailwindcss": "^4.1.0"
+	},
+	"dependencies": {
+		"@playform/compress": "^0.1.9"
 	}
 }
